# agentic-web-extraction

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agentic_web_extraction/: __init__.py  cache.py  cli.py  config.py  extractor.py  fetch.py  frontier.py  logsink.py  normalize.py  result.py
agentic_web_extraction/providers/: __init__.py  openai_provider.py
data/: Foundations Funding Research - 260512.tsv
examples/: grants.py  strippers.py
