[project]
name = "agentic-web-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jason Lo", email = "lcmjlo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hishel>=1.2.1",
    "httpx>=0.28.1",
    "markitdown>=0.1.5",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "tenacity>=9.1.4",
    "tldextract>=5.3.1",
    "typer>=0.25.1",
]

[project.scripts]
awe = "agentic_web_extraction:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
